Creacion de la Database consus atributos

--- a/Views/Cedulas/Details.cshtml
+++ b/Views/Cedulas/Details.cshtml
@@ -11,10 +11,22 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.Nombre)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.Nombre)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Cedula)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Cedula)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Soltero)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Soltero)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Casado)
@@ -23,10 +35,10 @@
             @Html.DisplayFor(model => model.Casado)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Estado)
+            @Html.DisplayNameFor(model => model.Hijos)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Estado)
+            @Html.DisplayFor(model => model.Hijos)
         </dd>
     </dl>
 </div>
